serve static files

--- a/static/html/readme.html
+++ b/static/html/readme.html
@@ -48,7 +48,7 @@
         <!-- Le contenu Markdown sera inséré ici -->
     </div>
 
-    <script type="text/javascript" src="marked.min.js"></script>
+    <script type="text/javascript" src="../js/marked.min.js"></script>
 
 
     <script>
