--- a/static/html/nav.html
+++ b/static/html/nav.html
@@ -3,6 +3,7 @@
   <a class="active" href="/html">Requêtes modbus</a>
   <a href="/html/readme.html">ReadME</a>
   <a href="/html/logs.html">Logs</a>
+  <a href="/html/graph.html">Graph</a>
 
 </div> 
 
