--- a/static/html/index.html
+++ b/static/html/index.html
@@ -178,7 +178,7 @@
 
     
     
-    <script src="../js/jquery.js"></script> 
+    <script src="/static/js/jquery.js"></script> 
     <script>
 
         $(function(){
