--- a/static/html/nav.html
+++ b/static/html/nav.html
@@ -1,9 +1,9 @@
 
 <div class="topnav">
-  <a class="active" href="/html">Requêtes modbus</a>
-  <a href="/html/readme.html">ReadME</a>
-  <a href="/html/logs.html">Logs</a>
-  <a href="/html/graph.html">Graph</a>
+  <a class="active" href="/">Requêtes modbus</a>
+  <a href="/readme.html">ReadME</a>
+  <a href="/logs.html">Logs</a>
+  <a href="/graph.html">Graph</a>
 
 </div> 
 
