--- a/static/html/readme.html
+++ b/static/html/readme.html
@@ -49,10 +49,10 @@
         <!-- Le contenu Markdown sera inséré ici -->
     </div>
 
-    <script type="text/javascript" src="../js/marked.min.js"></script>
+    <script type="text/javascript" src="static/js/marked.min.js"></script>
 
 
-    <script src="../js/jquery.js"></script> 
+    <script src="/static/js/jquery.js"></script> 
     <script>
 
     $(function(){
