--- a/static/html/logs.html
+++ b/static/html/logs.html
@@ -125,7 +125,7 @@
         </div>
     </div>
 
-    <script src="../js/jquery.js"></script> 
+    <script src="/static/js/jquery.js"></script> 
     <script>
 
     $(function(){
